[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/crab/crab1.png" type="Texture" id=1]
[ext_resource path="res://screens/main/Crab.gd" type="Script" id=2]
[ext_resource path="res://assets/bubble.png" type="Texture" id=3]
[ext_resource path="res://assets/sound/claw.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/crab.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/shock.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/crab/crab2.png" type="Texture" id=7]
[ext_resource path="res://assets/crab/shock2.png" type="Texture" id=8]
[ext_resource path="res://assets/crab/shock1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 30.103

[sub_resource type="CapsuleShape2D" id=4]
radius = 23.3606
height = 66.0916

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 90.0
initial_velocity = 11.49
initial_velocity_random = 0.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_random = 0.4

[node name="Crab" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 3
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 1 )

[node name="ShockSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.85956, 1.1543 )
shape = SubResource( 3 )

[node name="HoldArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoldArea"]
position = Vector2( 48.7934, 1.18021 )
shape = SubResource( 4 )

[node name="Bubbles" type="Particles2D" parent="."]
position = Vector2( 18.8833, 0 )
emitting = false
amount = 15
lifetime = 10.0
explosiveness = 0.95
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="ClawStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MoveStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ShockStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 6.0
